<resources>
    <string name="app_name">PC Simulator Save Editor</string>
    <string name="open_file">Open File</string>
    <string name="save_file">Save File</string>
    <string name="copy">Copy</string>
    <string name="help">Help</string>
    <string name="decrypt">Decrypt/Encrypt</string>
    <string name="hint">Your save file</string>
    <string name="term">Terminology</string>
    <string name="about">About</string>
    <string name="savefile">PC Simulator Save Files</string>
    <string name="websites">PC Simulator Websites</string>
    <string name="sourceintro">Source code introduction</string>
    <string name="decrypt_after_open">Decrypt after opening file</string>
    <string name="encrypt_after_opening">Encrypt after saving file</string>
    <string name="decryptToTxt">Decrypt/Encrypt to TXT</string>
    <string name="howtouse">How to use the App</string>
    <string name="save_file_help">PC Simulator Save File</string>
    <string name="insert">Insert object</string>
    <string name="dumper">Password Dumper</string>
    <string name="clean">Cleanup</string>
    <string name="options">Save Options</string>
    <string name="illegalitems">Illegal items</string>
    <string name="Changelog">Changelog</string>
    <string name="howtoedit">How to edit a PC Simulator Save File</string>
    <string name="monitor">Monitor</string>
    <string name="pillow">Pillow</string>
    <string name="installer">PCOS Installer</string>
    <string name="dailymarket">Daily Market (bypass Bitcoin requirement)</string>
    <string name="m2">M.2 NVMe SSD</string>
    <string name="password">Password</string>
    <string name="object_explorer">Object Browser</string>
    <string name="gotofirst">Go to first</string>
    <string name="gotolast">Go to last</string>
    <string name="dumpsysids">Dump system IDs</string>
</resources>