<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/decrypt_after_opening"
        android:title="@string/decrypt_after_open"
        app:actionLayout="@layout/switch_item" />
    <item
        android:id="@+id/encrypt_after_saving"
        android:title="@string/encrypt_after_opening"
        app:actionLayout="@layout/switch_item" />
    <item
        android:id="@+id/changelog"
        android:title="@string/Changelog" />
    <item
        android:id="@+id/about"
        android:title="@string/about" />
    <item
        android:id="@+id/help"
        android:icon="@drawable/baseline_help_outline_24"
        android:title="@string/help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/discord"
        android:title="Discord" />
    <item
        android:id="@+id/insert"
        android:title="@string/insert" />
    <item
        android:id="@+id/saveoptions"
        android:title="@string/options" />
    <item
        android:id="@+id/dump"
        android:title="@string/dumper" />
    <item
        android:id="@+id/clear"
        android:title="@string/clean" />
</menu>